--- a/front/package.json
+++ b/front/package.json
@@ -36,5 +36,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage":"http://isaac-j-miller.github.io/virtual-hendi"
+  "homepage":"https://isaac-j-miller.github.io/virtual-hendi/"
 }
