refactored whole project, added express server, spectra

--- a/front/package.json
+++ b/front/package.json
@@ -6,17 +6,26 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
+    "css-element-queries": "^1.2.3",
+    "dygraphs": "^2.1.0",
+    "nodemon": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-draggable-resizable-modal": "^0.1.2",
+    "react-dygraphs": "0.0.1",
+    "react-resizable": "^1.11.0",
+    "react-scripts": "3.4.1",
+    "victory": "^35.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "watch": "nodemon index.jsx"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +45,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage":"https://isaac-j-miller.github.io/virtual-hendi/"
+  "homepage": "https://isaac-j-miller.github.io/virtual-hendi/"
 }
