--- a/scripts/virtual-hendi.service
+++ b/scripts/virtual-hendi.service
@@ -1,4 +1,13 @@
 #!/bin/bash
+### BEGIN INIT INFO
+# Provides:          virtual-hendi-host
+# Required-Start:    $all
+# Required-Stop:
+# Default-Start:     2 3 4 5
+# Default-Stop:
+# Short-Description: Hosts virtual HENDI web app
+### END INIT INFO
+
 sudo -i
 cd ~/virtual-hendi
 scripts/start
