--- a/back/package.json
+++ b/back/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www --watch ../front --watch ."
+    "start": "nodemon --config \"${VIRTUAL_HENDI_ROOT}/nodemon.json\" --watch \"${VIRTUAL_HENDI_ROOT}\" --ext js,jsx,json,mjs ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
