--- a/back/package.json
+++ b/back/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon --config \"${VIRTUAL_HENDI_ROOT}/nodemon.json\" --watch \"${VIRTUAL_HENDI_ROOT}\" --ext js,jsx,json,mjs ./bin/www"
   },
   "dependencies": {
+    "async-exec": "^1.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
