--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,9 @@
 #    and best practices on handling the access key credentials.
 
 on:
-  release:
-    types: [created]
+  # Triggers the workflow on push events but only for the master branch
+  push:
+    branches: [master]
 
 name: Deploy to Amazon ECS
 
