--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,7 @@
     "file-saver": "^2.0.2",
     "nodemon": "^2.0.6",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,7 +16,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "watch": "nodemon index.jsx"
   },
   "eslintConfig": {
@@ -36,7 +34,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "react-scripts": "3.4.1"
   },
-  "homepage": "https://isaac-j-miller.github.io/virtual-hendi/"
+  "homepage": "https://virtual-hendi.isaac-j-miller.com"
 }
