--- a/.github/workflows/gated.yml
+++ b/.github/workflows/gated.yml
@@ -12,9 +12,11 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Install terraform v1.0.5
-        uses: little-core-labs/install-terraform@v2.0.0
-        with:
-            version: 1.0.5
+        run: |
+          sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
+          curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+          sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+          sudo apt-get update && sudo apt-get install terraform=1.0.5
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
